# lab-trip-docs

./: .env.example  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  compose.yml  export_test_small.txt  insert_sql_test.txt  pyproject.toml  requirements.txt  stage_README_uv.md  stage_analyze.txt  stage_analyze_partial.txt  stage_docs_roadmap.txt  stage_docs_roadmap_v2.txt  stage_full_analyze.txt  stage_full_store_safe2.txt  stage_full_web_safe.txt  stage_readme_full.txt  stage_review_lookup_test.txt  stage_tests_analyze.txt  stage_tests_analyze_fixed.txt  stage_tests_store_export.txt  stage_web_shim.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FINAL_REVIEW.md  OPERATIONS.md  ROADMAP.md  UX_REVIEW.md
scripts/: run.sh
tests/: test_analyze.py  test_roster.py  test_store_export.py  test_web_smoke.py
tripdoc/: __main__.py  analyze.py  config.py  exporters.py  roster.py  store.py  web.py  web_impl.py
